--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     ],
     "require": {
         "php": "^5.6|^7.0",
-        "symfony/framework-bundle": "^2.7|^3.0",
-        "egeloen/google-map": "^2.0.2"
+        "symfony/framework-bundle": "^2.7|^3.0|^4.0",
+        "egeloen/google-map": "dev-master"
     },
     "require-dev": {
         "egeloen/serializer-bundle": "^1.0",
